Update documentation index page

--- a/docs/pages/index.njk
+++ b/docs/pages/index.njk
@@ -38,8 +38,55 @@ SPDX-License-Identifier: GFDL-1.3-only
 {% endmacro %}
 
 {% block content %}
-    <div class="container center p2 p3-s">
-        <h2 class="mt0">
+    <div class="container center ph2 ph3-s mb4">
+        <div class="flex flex-column tc ph2 ph0-m mv6 mw8 center">
+            <h2 class="f-subheadline lh-solid grow mt0 mb4">C4S CSS</h2>
+            <div class="row column-gap row-gap">
+                <div class="col-12 col-m col-3-l grow ba br3 b--black-20 p3">
+                    <h3 class="mt0 f4">Lightweight</h3>
+                    Only &plusmn;13 kilobytes
+                    <a class="link hover-underline black"
+                        href="/c4s.min.css.gz"
+                        download>minified and gzipped</a>
+                    but fully-equipped ⚒️
+                </div>
+                <div class="col-12 col-m col-3-l grow ba br3 b--black-20 p3">
+                    <h3 class="mt0 f4">Responsive</h3>
+                    Responsive out-of-the-box, suitable for mobile-friendly designs 📱
+                </div>
+                 <div class="col-12 col-m col-3-l grow ba br3 b--black-20 p3
+                     hide-child relative overflow-hidden">
+                    <h3 class="mt0 f4">Free software</h3>
+                    Source code is available on
+                    <a class="link dark-blue hover-underline"
+                        href="https://github.com/casdijkman/c4s"
+                        target="_blank"
+                        rel="noreferrer">github</a>
+                    under the
+                    <a class="link dark-blue hover-underline"
+                        href="https://www.gnu.org/licenses/gpl-3.0.en.html"
+                        target="_blank"
+                        rel="noreferrer nofollow">GNU&nbsp;GPL&nbsp;v3</a> 🆓
+                    <div class="child">
+                        <img class="stretch w-100 h-100 cover z-n1 o-50"
+                            src="/docs/assets/Richard Stallman approves.webp"
+                            alt="Stallman approves"
+                            loading="lazy">
+                    </div>
+                 </div>
+                 <div class="col-12 col-m col-3-l grow ba br3 b--black-20 p3">
+                    <h3 class="mt0 f4">Customizable</h3>
+                    Written in
+                    <a class="link dark-blue hover-underline"
+                        href="https://sass-lang.com/"
+                        target="_blank"
+                        rel="noreferrer nofollow">SASS</a>,
+                    customizable and extensible to your heart's content ❤️
+                </div>
+            </div>
+        </div>
+
+        <h2>
             Documentation
         </h2>
 
