--- a/docs/pages/docs/list.njk
+++ b/docs/pages/docs/list.njk
@@ -10,7 +10,8 @@ SPDX-License-Identifier: GFDL-1.3-only
 
 {% block content %}
     <div class="mw8 center p3">
-        <div class="js-sticky row f5 b sticky bg-white bb bw1 b--black-20 transition-medium" style="top: var(--header-height);">
+        <div class="js-sticky dn flex-m row f5 b sticky bg-white bb bw1 b--black-20 transition-medium"
+            style="top: var(--header-height);">
             <div class="col-12 col-3-m col-2-l p2">
                 Selectors
             </div>
@@ -21,27 +22,20 @@ SPDX-License-Identifier: GFDL-1.3-only
 
         {% for file in files %}
             {% if file.isModule and file.isRaw %}
-                <div class="row bt b--black-20 sticky bg-white bb bw1 ph2" style="top: var(--sticky-height, 115px);">
-                    <div class="flex flex-wrap items-center justify-between w-100">
-                        <h2 class="f5 mv0 nowrap">
-                            Module <span class="dib ba br3 ph2 pv1 mv1 lh-solid">{{ file.name }}</span>
-                        </h2>
-                        <div class="flex flex-wrap">
-                            <a href="/docs/example.html#{{ file.name }}"
-                                class="dib link dark-blue hover-underline p2">
-                                Examples
-                            </a>
-                            <a href="{{ file.file | replace(".raw", "") }}"
-                                class="dib link dark-blue hover-underline p2">
-                                View CSS
-                            </a>
-                            {#
-                                <a href="{{ file.file }}"
-                                class="dib link dark-blue hover-underline p2">
-                                Css file raw
-                                </a>
-                            #}
-                        </div>
+                <div class="row bt b--black-20 sticky bg-white bb bw1 ph2"
+                    style="top: var(--sticky-height, 115px);">
+                    <h2 class="col-12 col-8-m f5 mv0 nowrap overflow-x-scroll">
+                        Module <span class="dib ba br3 ph2 pv1 mv1 lh-solid">{{ file.name }}</span>
+                    </h2>
+                    <div class="col-12 col-4-m flex justify-end-m nl2">
+                        <a href="/docs/example.html#{{ file.name }}"
+                            class="dib link dark-blue hover-underline p2 ml2-between">
+                            Examples
+                        </a>
+                        <a href="{{ file.file | replace(".raw", "") }}"
+                            class="dib link dark-blue hover-underline p2 ml2-between">
+                            View CSS
+                        </a>
                     </div>
                 </div>
                 {% for rule in file.css.stylesheet.rules %}
