--- a/docs/pages/index.njk
+++ b/docs/pages/index.njk
@@ -39,8 +39,11 @@ SPDX-License-Identifier: GFDL-1.3-only
 
 {% block content %}
     <div class="container center ph2 ph3-s mb4">
-        <div class="flex flex-column tc ph2 ph0-m mv6 mw8 center">
-            <h2 class="f-subheadline lh-solid grow mt0 mb4">C4S CSS</h2>
+        <div class="flex flex-column tc ph2 ph0-m mv5 mv6-m mw8 center">
+            <h2 class="f-subheadline lh-solid grow mt0 mb4">
+                <span class="tracked-tight">C4S</span>
+                CSS
+            </h2>
             <div class="row column-gap row-gap">
                 <div class="col-12 col-m col-3-l grow ba br3 b--black-20 p3">
                     <h3 class="mt0 f4">Lightweight</h3>
