--- a/docs/pages/docs/example.njk
+++ b/docs/pages/docs/example.njk
@@ -110,7 +110,7 @@ SPDX-License-Identifier: GFDL-1.3-only
                                     <pre class="hljs dib mv0"><code>{{ ruleText | highlight | safe }}</code></pre>
                                 </div>
 
-                                <div class="mt4-between dn-empty">
+                                <div class="js-example mt4-between dn-empty">
                                     {{ example.example(file.name, rule.selectors, rule.declarations) }}
                                 </div>
                             </div>
