--- a/docs/pages/index.njk
+++ b/docs/pages/index.njk
@@ -70,7 +70,7 @@ SPDX-License-Identifier: GFDL-1.3-only
                         href="https://www.gnu.org/licenses/gpl-3.0.en.html"
                         target="_blank"
                         rel="noreferrer nofollow">GNU&nbsp;GPL&nbsp;v3</a> 🆓
-                    <div class="child">
+                    <div class="child dn db-m">
                         <img class="stretch w-100 h-100 cover z-n1 o-50"
                             src="/docs/assets/Richard Stallman approves.webp"
                             alt="Stallman approves"
