Add scroll to top button in docs

--- a/docs/layouts/default.njk
+++ b/docs/layouts/default.njk
@@ -46,6 +46,14 @@
                 {% block content %}{% endblock %}
             </main>
 
+            <aside class="js-scroll-top fixed right-0 bottom-0 w3 h3 p2 pb1 mr3 mb3 ba br3 o-60 bg-white relative"
+                style="display: none;">
+                <a class="black stretch-pseudo" href="#top" title="Scroll back to top">
+                    {# https://unpkg.com/ionicons@5.5.2/dist/svg/arrow-up-outline.svg #}
+                    <svg xmlns="http://www.w3.org/2000/svg" class="ionicon" viewBox="0 0 512 512"><title>Arrow Up</title><path fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="48" d="M112 244l144-144 144 144M256 120v292"/></svg>
+                </a>
+            </aside>
+
             {# <footer>
             footer
             </footer> #}
