--- a/docs/pages/index.njk
+++ b/docs/pages/index.njk
@@ -57,8 +57,7 @@ SPDX-License-Identifier: GFDL-1.3-only
                     <h3 class="mt0 f4">Responsive</h3>
                     Responsive out-of-the-box, suitable for mobile-friendly designs 📱
                 </div>
-                 <div class="col-12 col-m col-3-l grow ba br3 b--black-20 p3
-                     hide-child relative overflow-hidden">
+                 <div class="col-12 col-m col-3-l grow ba br3 b--black-20 p3">
                     <h3 class="mt0 f4">Free software</h3>
                     Source code is available on
                     <a class="link dark-blue hover-underline"
@@ -69,13 +68,7 @@ SPDX-License-Identifier: GFDL-1.3-only
                     <a class="link dark-blue hover-underline"
                         href="https://www.gnu.org/licenses/gpl-3.0.en.html"
                         target="_blank"
-                        rel="noreferrer nofollow">GNU&nbsp;GPL&nbsp;v3</a> 🆓
-                    <div class="child dn db-m">
-                        <img class="stretch w-100 h-100 cover z-n1 o-50"
-                            src="/docs/assets/Richard Stallman approves.webp"
-                            alt="Stallman approves"
-                            loading="lazy">
-                    </div>
+                        rel="noreferrer nofollow">GNU&nbsp;GPL&nbsp;v3</a> 👐
                  </div>
                  <div class="col-12 col-m col-3-l grow ba br3 b--black-20 p3">
                     <h3 class="mt0 f4">Customizable</h3>
