--- a/docs/pages/docs/example.njk
+++ b/docs/pages/docs/example.njk
@@ -71,53 +71,47 @@ SPDX-License-Identifier: GFDL-1.3-only
      }
     </style>
 
-    <div class="js-example-links js-sticky df flex-nowrap sticky bg-white overflow-x-auto transition-medium  z-1" style="top: var(--header-height);">
+    <div class="js-example-links js-sticky df flex-nowrap sticky bg-white overflow-x-auto transition-medium  z-1"
+        style="top: var(--header-height);">
         <a href="#top" class="link black p3 bl-between bb b--moon-gray nowrap">
-            &uarr;
-            <span class="sr-only">To top</span>
+            &uarr; <span class="sr-only">Scroll to top</span>
         </a>
-        {% for file in files %}
-            {% if file.isModule and file.isRaw %}
-                <a href="#{{ file.name }}" class="link black p3 bl-between bb b--moon-gray nowrap">
-                    {{ file.name }}
-                </a>
-            {% endif %}
+        {% for file in files | selectattr("isModule") | selectattr("isRaw") %}
+            <a href="#{{ file.name }}" class="link black p3 bl-between bb b--moon-gray nowrap">
+                {{ file.name }}
+            </a>
         {% endfor %}
     </div>
 
     <div class="container center p2 p3-s">
-        {% for file in files %}
-            {% if file.isModule and file.isRaw %}
-                <div class="mb4">
-                    <div id="{{ file.name }}" class="relative" style="bottom: var(--sticky-height, 76px);"></div>
+        {% for file in files | selectattr("isModule") | selectattr("isRaw") %}
+            <div class="mt4-between">
+                <div id="{{ file.name }}" class="relative" style="bottom: var(--sticky-height, 76px);"></div>
 
-                    <h2 class="f4 mt0">
-                        {{ file.name | replace("-", " ") | title }}
-                    </h2>
+                <h2 class="f4 mt0">{{ file.name | replace("-", " ") | title }}</h2>
 
-                    <details>
-                        <summary class="p2 cursor-pointer user-select-none" data-module="{{ file.name }}">
-                            More information
-                        </summary>
+                <details>
+                    <summary class="p2 cursor-pointer user-select-none" data-module="{{ file.name }}">
+                        More information
+                    </summary>
 
-                        {% for rule in file.css.stylesheet.rules %}
-                            <div class="pv3 pl3 mt4-between bl b--silver">
-                                {% set ruleText %}{{ rule.selectors | join(", ") }} {{ "{" }}{% for declaration in rule.declarations %}
+                    {% for rule in file.css.stylesheet.rules %}
+                        <div class="pv3 pl3 mt4-between bl b--silver">
+                            {% set ruleText %}{{ rule.selectors | join(", ") }} {{ "{" }}{% for declaration in rule.declarations %}
   {{ declaration.property }}: {{ declaration.value }};{% endfor %}
 }{% endset %}
 
-                                <div class="overflow-x-auto mt4-between">
-                                    <pre class="hljs dib mv0"><code>{{ ruleText | highlight | safe }}</code></pre>
-                                </div>
-
-                                <div class="js-example mt4-between dn-empty">
-                                    {{ example.example(file.name, rule.selectors, rule.declarations) }}
-                                </div>
+                            <div class="overflow-x-auto mt4-between">
+                                <pre class="hljs dib mv0"><code>{{ ruleText | highlight | safe }}</code></pre>
                             </div>
-                        {% endfor %}
-                    </details>
-                </div>
-            {% endif %}
+
+                            <div class="js-example mt4-between dn-empty">
+                                {{ example.example(file.name, rule.selectors, rule.declarations) }}
+                            </div>
+                        </div>
+                    {% endfor %}
+                </details>
+            </div>
         {% endfor %}
     </div>
 {% endblock %}
