--- a/docs/macros/example.njk
+++ b/docs/macros/example.njk
@@ -4,6 +4,24 @@
     SPDX-License-Identifier: GFDL-1.3-only
 #}
 
+{% macro ruleText(rule) -%}{{ rule.selectors | join(", ") }} {{ "{" }}{% for declaration in rule.declarations %}
+  {{ declaration.property }}: {{ declaration.value }};{% endfor %}
+}{% endmacro %}
+
+{% macro generic(file, rule) %}
+    {% set ruleText %}{{ ruleText(rule) }}{% endset %}
+
+    <div class="pv3 pl3 mt4-between bl b--silver">
+        <div class="overflow-x-auto mt4-between">
+            <pre class="hljs dib mv0"><code>{{ ruleText | highlight | safe }}</code></pre>
+        </div>
+
+        <div class="js-example mt4-between dn-empty">
+            {{ caller() }}
+        </div>
+    </div>
+{% endmacro %}
+
 {% macro exampleBoxDark(firstClass, caption, debugClass = "debug-striped-black", borderColorClass = "b--black") %}
     <div class="dib p3 ba {{ borderColorClass }} {{ debugClass }}">
         {{ caller(firstClass, caption) }}
@@ -33,10 +51,6 @@
 
     {% if type === "" %}
         <div data-example-not-found="no type"></div>
-    {% elif type === "aspect-ratio" %}
-        <div class="df items-center justify-center ba h5 p3 tc {{ firstClass }}">
-            <span>{{ caption | safe }}</span>
-        </div>
     {% elif type === "background-clip" %}
         <div class="ba f1 b black-20 debug-striped-black {{ firstClass }}"
             style="background-image: repeating-linear-gradient(-45deg, transparent 0 10px, black 10px 20px);">
