--- a/docs/partials/aspect-ratio.njk
+++ b/docs/partials/aspect-ratio.njk
@@ -1,3 +1,9 @@
+{#
+SPDX-FileCopyrightText: 2021 Cas Dijkman
+
+SPDX-License-Identifier: GFDL-1.3-only
+#}
+
 {% import "docs/macros/example.njk" as example %}
 
 {% for file in files | selectattr("isModule") | selectattr("isRaw") %}
