Make text-align responsive

--- a/src/c4s-custom-verbose.scss
+++ b/src/c4s-custom-verbose.scss
@@ -60,7 +60,6 @@ $modules: (
   'text-decoration':        false,
   'text-shadow':            false,
   'text-transform':         false,
-  'text-align':             false,
   'word-break':             false,
   'opacity':                false,
   'transform':              false,
@@ -74,6 +73,7 @@ $modules: (
   'table':                  false,
   'spanning-breakpoints':   false,
   'debug':                  false,
+  'text-align':             true,
   'padding':                true,
   'margin':                 true,
   'width':                  true,
