--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -57,7 +57,6 @@ $modules: (
   'text-decoration':        false,
   'text-shadow':            false,
   'text-transform':         false,
-  'text-align':             false,
   'word-break':             false,
   'opacity':                false,
   'transform':              false,
@@ -71,6 +70,7 @@ $modules: (
   'table':                  false,
   'spanning-breakpoints':   false,
   'debug':                  false,
+  'text-align':             true,
   'padding':                true,
   'margin':                 true,
   'width':                  true,
