Add white background to box-shadow example

--- a/docs/partials/examples/box-shadow.njk
+++ b/docs/partials/examples/box-shadow.njk
@@ -20,7 +20,7 @@ SPDX-License-Identifier: GFDL-1.3-only
                         {{ caption | safe }}
                     </div>
 
-                    <div class="col-auto p3 br-pill {{ firstClass }}">
+                    <div class="col-auto p3 br-pill bg-white {{ firstClass }}">
                         {{ caption | safe }}
                     </div>
                  </div>
