--- a/src/modules/_hover.scss
+++ b/src/modules/_hover.scss
@@ -51,7 +51,7 @@
     transition: color .15s ease-in;
 
     &:focus {
-      outline: 1px dotted currentColor;
+      outline: 1px dotted currentcolor;
     }
   }
 
