--- a/src/modules/background-attachment-module.scss
+++ b/src/modules/background-attachment-module.scss
@@ -6,4 +6,4 @@
 
 @use './background-attachment';
 
-@include background-attachment.background-attachment();
+@include background-attachment.background-attachment;
