--- a/src/modules/hover-background-color-module.scss
+++ b/src/modules/hover-background-color-module.scss
@@ -6,4 +6,4 @@
 
 @use './hover-background-color';
 
-@include hover-background-color.hover-background-color();
+@include hover-background-color.hover-background-color;
