--- a/src/modules/spanning-breakpoints-module.scss
+++ b/src/modules/spanning-breakpoints-module.scss
@@ -6,4 +6,4 @@
 
 @use './spanning-breakpoints';
 
-@include spanning-breakpoints.spanning-breakpoints();
+@include spanning-breakpoints.spanning-breakpoints;
