--- a/src/modules/_spanning-breakpoints.scss
+++ b/src/modules/_spanning-breakpoints.scss
@@ -12,7 +12,7 @@
 @use 'sass:math';
 
 @mixin spanning-breakpoints($media: null) {
-  @if $media != null {
+  @if $media {
     @error 'Spanning-breakpoints module is not compatible with media suffix';
   }
 
