--- a/src/modules/background-position-module.scss
+++ b/src/modules/background-position-module.scss
@@ -6,4 +6,4 @@
 
 @use './background-position';
 
-@include background-position.background-position();
+@include background-position.background-position;
