--- a/docs/pages/docs/list.njk
+++ b/docs/pages/docs/list.njk
@@ -24,7 +24,7 @@ SPDX-License-Identifier: GFDL-1.3-only
             {% if file.isModule and file.isRaw %}
                 <div class="row bt b--black-20 sticky bg-white bb bw1 ph2"
                     style="top: var(--sticky-height, 115px);">
-                    <h2 class="col-12 col-8-m f5 mv0 nowrap overflow-x-scroll">
+                    <h2 id="{{ file.name }}" class="col-12 col-8-m f5 mv0 nowrap overflow-x-scroll">
                         Module <span class="dib ba br3 ph2 pv1 mv1 lh-solid">{{ file.name }}</span>
                     </h2>
                     <div class="col-12 col-4-m flex justify-end-m nl2">
