--- a/docs/pages/index.njk
+++ b/docs/pages/index.njk
@@ -8,8 +8,9 @@ SPDX-License-Identifier: GFDL-1.3-only
 
 {% set description = "C4S CSS documentation index page" %}
 
-{% macro renderFileRow(file) %}
-    <tr class="stripe-light">
+{% macro renderFileRow(file, index) %}
+    <tr class="stripe-light" data-original-order="{{ index }}">
+        <th></th>
         <td class="ph2 pv1">
             <a class="link dark-blue hover-underline" href="{{ file.file }}">
                 {{ file.name }}
@@ -19,18 +20,33 @@ SPDX-License-Identifier: GFDL-1.3-only
                 (minified)
             {% endif %}
         </td>
-        <td class="ph2 pv1 nowrap" title="{{ file.size | formatInteger }} bytes">
+        <td class="ph2 pv1 nowrap" title="{{ file.size | formatInteger }} bytes" data-value="{{ file.size }}">
             {{ file.sizePretty }}
         </td>
-        <td class="ph2 pv1 nowrap" title="{{ file.gzipSize | formatInteger }} bytes">
+        <td class="ph2 pv1 nowrap" title="{{ file.gzipSize | formatInteger }} bytes" data-value="{{ file.size }}">
             {{ file.gzipSizePretty }}
         </td>
-        <td class="ph2 pv1">
+        {% if file.isModule %}
+            <td class="ph2 pv1">
+                <a
+                    class="dib link dark-blue hover-underline ml3-between"
+                    href="/docs/example.html#{{ file.name }}"
+                    title="See examples for {{ file.name }}">
+                    Examples
+                </a>
+                <a
+                    class="dib link dark-blue hover-underline ml3-between"
+                    href="/docs/list.html#{{ file.name }}"
+                    title="See list of CSS rules">
+                    Rules
+                </a>
+            </td>
+        {% endif %}
+         <td class="ph2 pv1">
             <a class="db link black tc" href="{{ file.file }}" download>
                 <span class="sr-only">Download</span>
                 <div class="svg-wrapper dib">
-                    {# https://unpkg.com/ionicons@5.5.2/dist/svg/download-outline.svg #}
-                    <svg xmlns="http://www.w3.org/2000/svg" class="ionicon" viewBox="0 0 512 512"><title>Download</title><path d="M336 176h40a40 40 0 0140 40v208a40 40 0 01-40 40H136a40 40 0 01-40-40V216a40 40 0 0140-40h40" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="32"/><path fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="32" d="M176 272l80 80 80-80M256 48v288"/></svg>
+                    {% include "docs/icons/download-outline.njk" %}
                 </div>
             </a>
         </td>
@@ -86,7 +102,7 @@ SPDX-License-Identifier: GFDL-1.3-only
             </div>
         </div>
 
-        <h2>
+        <h2 id="documentation">
             Documentation
         </h2>
 
@@ -98,7 +114,7 @@ SPDX-License-Identifier: GFDL-1.3-only
             List of rules
         </a>
 
-        <h2>
+        <h2 id="downloads">
             Downloads
         </h2>
 
@@ -116,56 +132,61 @@ SPDX-License-Identifier: GFDL-1.3-only
             {% endfor %}
         </div>
 
-        <h2>
+        <h2 id="files">
             Files
         </h2>
 
         <div class="overflow-x-auto">
-            <table class="collapse lh-text">
+            <table class="js-order-table collapse lh-text">
                 <tr class="stripe-light b">
-                    <td class="p2">
+                    <th class="p2 cursor-pointer user-select-none" data-sort-name="reset"></th>
+                    <th class="p2 cursor-pointer user-select-none">
                         Name
-                    </td>
-                    <td class="p2">
+                    </th>
+                    <th class="p2 cursor-pointer user-select-none" data-sort-name="number">
                         Size
-                    </td>
-                    <td class="p2">
-                        Size gzipped
-                    </td>
-                    <td class="p2">
+                    </th>
+                    <th class="p2 cursor-pointer user-select-none" data-sort-name="number">
+                        Size gzip
+                    </th>
+                    <th class="p2 user-select-none" data-sort-name="none">
                         Download
-                    </td>
+                    </th>
                 </tr>
 
                 {% for file in files | rejectattr('isRaw') | rejectattr('isModule') | rejectattr('isCustom') %}
-                    {{ renderFileRow(file) }}
+                    {{ renderFileRow(file, loop.index0) }}
                 {% endfor %}
             </table>
         </div>
 
-        <h2>
+        <h2 id="modules">
             Modules ({{ files | rejectattr('isMinified') | rejectattr('isRaw') | selectattr('isModule') | length }})
         </h2>
 
         <div class="overflow-x-auto">
-            <table class="collapse lh-text">
+            <table class="js-order-table collapse lh-text">
                 <tr class="stripe-light b">
-                    <td class="p2">
+                    <th class="p2 cursor-pointer user-select-none" data-sort-name="reset"></th>
+                    <th class="p2 cursor-pointer user-select-none">
                         Name
-                    </td>
-                    <td class="p2">
+                    </th>
+                    <th class="p2 cursor-pointer user-select-none" data-sort-name="number">
                         Size
-                    </td>
-                    <td class="p2">
-                        Size gzipped
-                    </td>
-                    <td class="p2">
+                    </th>
+                    <th class="p2 cursor-pointer user-select-none" data-sort-name="number">
+                        Size gzip
+                    </th>
+                    <th class="p2 user-select-none" data-sort-name="none">
+                        Documentation
+                    </th>
+                    <th class="p2 user-select-none" data-sort-name="none">
                         Download
-                    </td>
+                    </th>
                 </tr>
 
                 {% for file in files | rejectattr('isMinified') | rejectattr('isRaw') | selectattr('isModule') %}
-                    {{ renderFileRow(file) }}
+                    {{ renderFileRow(file, loop.index0) }}
                 {% endfor %}
             </table>
         </div>
